opam-version: "2.0"
version: "1.0.2"
synopsis: "PPX for bs-material-ui"
description: "Preproccessor for bs-material-ui styles."
maintainer: "Jonathan Siebern <jsiebern88@gmail.com>"
authors: [ "Jonathan Siebern <jsiebern88@gmail.com>" ]
homepage: "https://github.com/jsiebern/reason-mui-withstyles-ppx"
bug-reports: "https://github.com/jsiebern/reason-mui-withstyles-ppx/issues"
dev-repo: "git+https://github.com/jsiebern/reason-mui-withstyles-ppx.git"
depends: [
  "dune"                    {>="1.6.0" & build}
  "reason"                  {>="3.3.7" & build}
  "ocaml-migrate-parsetree" {>="1.1.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
